# bsdy_api

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 001_initial_schema.sql  002_admin_content.sql  003_admin_action_logs.sql
src/: config.rs  crypto.rs  db.rs  error.rs  main.rs  state.rs
src/middleware/: activity_log.rs  api_key.rs  auth.rs  mod.rs
src/models/: chat.rs  content.rs  log.rs  mental.rs  mod.rs  note.rs  user.rs
src/routes/: analytics.rs  auth.rs  chat.rs  content.rs  dev.rs  docs.rs  health.rs  log.rs  mod.rs  mood.rs  note.rs  onboarding.rs  report.rs
src/services/: agent_service.rs  analytics_service.rs  auth_service.rs  chat_service.rs  content_service.rs  email_service.rs  gemini_service.rs  mod.rs  mood_service.rs  note_service.rs  onboarding_service.rs  report_service.rs  scheduler_service.rs
tests/: test_auth_chat.rs  test_config_crypto.rs  test_database.rs  test_email.rs  test_errors_models.rs  test_gemini.rs  test_routes.rs  test_services.rs
tests/common/: mod.rs
