[package]
name = "bsdy_api"
version = "0.3.5"
edition = "2021"
description = "Mental Companion & Tracker Platform API"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs"] }
headers = "0.4"
hyper = { version = "1", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database (MariaDB/MySQL via SQLx)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "chrono",
    "uuid",
    "rust_decimal",
] }

# Decimal
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
oauth2 = "4"

# Email (Brevo SMTP)
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-native-tls",
    "smtp-transport",
    "builder",
] }

# HTTP client (Gemini API)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Encryption (E2E at-rest)
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Randomness
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Password hashing (for docs page)
argon2 = "0.5"

# Environment
dotenvy = "0.15"

# Scheduling
tokio-cron-scheduler = "0.11"

# SSE streaming for chat
async-stream = "0.3"

[dev-dependencies]
# Testing
wiremock = "0.6"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
axum-test = "16"
